# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2

  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: improved error
  messages when an unsatisfiable dependency is encountered. Now lets you know
  if there are masked packages that would satisfy the dep.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: emerging .tbz2
  packages and .ebuilds by name now works; this was broken in 2.0.30.

*portage-2.0.30 (28 Aug 2002)

  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: rewrote
  gettimeval() as cpv_counter() and updated it to handle corrupt COUNTER files,
  closing bug #6763.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: "emerge search" now
  displays information for masked packages if possible, closing bug #6823.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: fixed an old gbevin
  bug where "emerge search" wouldn't show packages whose version string was
  only one character long, ie. "foo-3". This closes bug #6800.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: added a missing
  call to flatten() in dep_check(), allowing recursive sublists in dependencies
  and SRC_URI variables to work; this closes bugs #7104, #7116, #7122.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> doman: fixed some typos,
  closing bug #7152.
  
  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py, emerge: major
  work to emerge: reworked the internal code organization to make depgraph code
  easier to understand; unified two code paths so that ebuild/.tbz2 choices
  when "--usepkg" should now be eternally consistent; tweaked portage.py so
  that dep_expand()'s dbapi argument is optional. In the process of all this,
  isolated and fixed bug #4508.
  
  27 Aug 2002; Martin Schlemmer <azarah@gentoo.org> portage.py: if the dep
  cache is stale, it is possible that aux_get() will call doebuild(depend) to