@@ -1,6 +1,13 @@
 # ChangeLog for Portage; the Gentoo Linux ports system 
 # Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL v2
 
+*portage-2.0.31 (29 Aug 2002)
+
+  28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> portage.py: fixed a config
+  file protection logic bug detected and identified by Azarah. It basically
+  broke most config file updates and has been broken for around six months.
+  Very surprised no one had encountered this issue before.
+  
   28 Aug 2002; Daniel Robbins <drobbins@gentoo.org> emerge: improved error
   messages when an unsatisfiable dependency is encountered. Now lets you know
   if there are masked packages that would satisfy the dep.
